--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRUEBA GIT</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <h1> PROBANDO GIT</h1>
+
+    <h2>probando cambios en las ramas</h2>
     
 </body>
 </html>
